[package]
edition = "2021"
name = "nrimp"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi4", "async", "tokio_rt", "compat-mode", "serde-json"] }
napi-derive = "2.16"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rquest = { version = "2.1.6", features = [
    "json",
    "cookies",
    "socks",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "multipart",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
foldhash = "0.1.0"
mime = "0.3"
http = "1.0"
rand = "0.8"
encoding_rs = "0.8"
html2text = "0.12"
http-body-util = "0.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
